k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imagehub-dashboard
  labels:
    name: imagehub-dashboard
    app: imagehub-dashboard
